[package]
name = "mike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["tracing", "macros"] }
bytes = "1"
chrono = "0.4"
futures = "0.3"
r2d2 = "0.8"
redis = "0.25"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
trace = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
time = { version = "0.3", features = ["local-offset"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde_json = "1"
candle-core = { version = "0.4", features = [] }
candle-transformers = { version = "0.4", features = [] }
candle-nn = { version = "0.4", features = [] }
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.15", features = ["hf-hub"] }
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.24"
tracing-chrome = "0.7"
ab_glyph = "0.2"
bevy = "0.13"
